[metadata]
name = os-migrate
summary = Tools for exporting/import openstack resources
description-file = README.md
author = CentOS Opstools SIG
author-email = centos@centos.org

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    os_migrate

[entry_points]
console_scripts =
    os-migrate-export = os_migrate.cmd.cmd_export:main
    os-migrate-import = os_migrate.cmd.cmd_import:main

openstack.migrate.datasource =
    identity = os_migrate.ds.identity:Datasource
    image = os_migrate.ds.image:Datasource
    compute = os_migrate.ds.compute:Datasource
