[metadata]
name = os-migrate
summary = Tools for exporting/import openstack resources
description-file = README.md
author = CentOS Opstools SIG
author-email = centos@centos.org

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    os_migrate

[entry_points]
openstack.cli.extension =
    os_migrate = os_migrate.plugin

openstack.migrate.v1 =
    migrate_export = os_migrate.cmd.cmd_export:Command
    migrate_import = os_migrate.cmd.cmd_import:Command
    migrate_driver_list = os_migrate.cmd.cmd_list_drivers:Command

console_scripts =
    os-migrate = os_migrate.cmd.main:main

openstack.migrate.command =
    export = os_migrate.cmd.cmd_export:Command
    import = os_migrate.cmd.cmd_import:Command
    list-drivers = os_migrate.cmd.cmd_list_drivers:Command

openstack.migrate.datasource =
    identity = os_migrate.ds.identity:Datasource
    image = os_migrate.ds.image:Datasource
    compute = os_migrate.ds.compute:Datasource
